Preload assets dynamically in the service worker using a list of assets served from the node.js server

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ test-results*.xml
 /server/devdocs/components-usage-stats.json
 /server/devdocs/proptypes-index.json
 /server/bundler/assets.json
+/server/bundler/asset-files.json
 
 *.rdb
 *.db
